--- a/Site/index.html
+++ b/Site/index.html
@@ -12,8 +12,10 @@
     />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <img src="5842a770a6515b1e0ad75afe.png" class="logo">
+  <div class="hero">
+    <img src="5842a770a6515b1e0ad75afe.png" class="logo">
     <h1>Join the <span class="underline">exploration</span></h1>
     <button>Apply!</button>
-  </body>
+  </div>
+</body>
 </html>
